--- a/style.css
+++ b/style.css
@@ -46,13 +46,13 @@ body {
   opacity: 0.8;
 }
 
-.results__score-container {
+.results-score-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.results__score-container::before {
+.results-score-container::before {
   content: "";
   display: block;
   width: 50%;
@@ -73,15 +73,16 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.results__score--big {
+.results-score--big {
   font-size: 60px;
   margin-top: 65px;
   align-self: center;
+  z-index: 10;
 
   color: hsl(0, 0%, 100%);
 }
 
-.results__score--small {
+.results-score--small {
   margin-top: -5px;
   font-size: 12px;
   color: hsl(241, 100%, 89%);
@@ -93,12 +94,12 @@ body {
   z-index: 2;
 }
 
-.results__msg--big {
+.heading-tertiary {
   color: hsl(0, 0%, 100%);
   margin-top: 65px;
   font-size: 20px;
 }
-.results__msg--small {
+.results-msg--small {
   font-size: 12px;
   font-weight: 400;
   margin: 10px 55px;
@@ -106,7 +107,7 @@ body {
 }
 
 .results__heading,
-.results__msg--small {
+.results-msg--small {
   color: hsl(241, 100%, 89%);
 }
 
@@ -225,11 +226,11 @@ li {
     text-align: center;
   }
 
-  .results__msg--small br {
+  .results-msg--small br {
     display: none;
   }
 
-  .results__msg--small {
+  .results-msg--small {
     margin: 10px 62px;
   }
 }
